--- a/registro-civil/envio-multiplataforma.html
+++ b/registro-civil/envio-multiplataforma.html
@@ -2207,21 +2207,21 @@
               </li>
               <li>
                 <a
-                  href="https://franklindevs.github.io/Proyectos/tramite-documentario/index.html"
+                  href="https://siamsoftempresa.github.io/proyecto1/tramite-documentario/index.html"
                 >
                   Trámite Documentario
                 </a>
               </li>
-              <li><a href="https://frankborda.github.io/proyecto4/archivo-central/index.htm">Archivo Central</a></li>
+              <li><a href="https://siamsoftempresa.github.io/proyecto2/archivo-central/index.html">Archivo Central</a></li>
               <li>
                 <a
-                  href="https://frankborda.github.io/Proyectos/vaso-leche/index.html"
+                  href=https://siamsoftempresa.github.io/proyecto3/vaso-leche/index.html"
                 >
                   Vaso de Leche
                 </a>
               </li>
               <li>
-                <a href="https://frankborda.github.io/proyecto/registro-civil"
+                <a href="https://siamsoftempresa.github.io/proyecto4/registro-civil/index.html"
                 >
                   Registro Civil
                 </a>
@@ -2689,6 +2689,7 @@
     </script>
   </body>
 </html>
+
 
 
 
